--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ notifications:
 
 
 before_install:
-- wget -O temp/elasticmq-server-0.13.11.jar https://s3-eu-west-1.amazonaws.com/softwaremill-public/elasticmq-server-0.13.11.jar
-- java -Dconfig.file=conf/elasticMq.conf -jar temp/elasticmq-server-0.13.11.jar &
+- wget -O elasticmq-server-0.13.11.jar https://s3-eu-west-1.amazonaws.com/softwaremill-public/elasticmq-server-0.13.11.jar
+- java -Dconfig.file=conf/elasticMq.conf -jar elasticmq-server-0.13.11.jar &
 
 script:
 - npm install
