updates to enqueuer 5.0.0

--- a/examples/sqs.yml
+++ b/examples/sqs.yml
@@ -37,3 +37,7 @@ subscriptions:
                     expectToBeDefined: ReceiptHandle
                 -   name: MD5OfBody
                     expectToBeDefined: MD5OfBody
+        onSubscribed:
+            assertions:
+                - expectToBeTruthy: true
+
