--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "url": "https://github.com/enqueuer-land/enqueuer-plugin-sqs/issues"
   },
   "homepage": "https://github.com/enqueuer-land/enqueuer-plugin-sqs#readme",
-  "devDependencies": {
-    "@types/node": "^11.13.15",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.2"
-  },
   "dependencies": {
-    "aws-sdk": "^2.482.0",
-    "enqueuer": "^6.0.0"
+    "@aws-sdk/client-sqs": "^3.734.0",
+    "enqueuer": "^6.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.10",
+    "ts-node": "^10.9.2",
+    "tslint": "^5.20.1",
+    "typescript": "^5.7.3"
   }
 }
