Queue can be purged before a message is published

--- a/examples/sqs.yml
+++ b/examples/sqs.yml
@@ -4,11 +4,12 @@ actuators:
     type: sqs
     payload: enqueuer
     awsConfiguration: <<awsConfiguration>>
+    purgeBeforeSend: true
     onInit:
       script: |
         this.messageParams.MessageGroupId = Math.random().toString(36).substring(2, 15);
     messageParams:
-      QueueUrl: http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/store-hours-changes-queue.fifo
+      QueueUrl: http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/location-menu-availability-queue.fifo
       MessageGroupId: group1
       MessageDeduplicationId: dedup1
     onPublished:
@@ -31,7 +32,7 @@ sensors:
     deleteMessage: true
     messageParams:
       #required
-      QueueUrl: http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/store-hours-changes-queue.fifo
+      QueueUrl: http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/location-menu-availability-queue.fifo
       #optionals
       AttributeNames:
         - All
