Stringifies non string payloads

--- a/examples/sqs.yml
+++ b/examples/sqs.yml
@@ -2,7 +2,9 @@ name: SQS test task
 actuators:
   - name: actuator description
     type: sqs
-    payload: enqueuer
+    payload:
+      object:
+        enq: "test"
     awsConfiguration: <<awsConfiguration>>
     purgeBeforeSend: true
     onInit:
